--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,8 +25,11 @@ services:
         - AIRFLOW_DATABASE_PASSWORD=bitnami1
         - AIRFLOW_EXECUTOR=CeleryExecutor
         - AIRFLOW_WEBSERVER_HOST=airflow
+        - AIRFLOW_LOAD_EXAMPLES=no
       volumes:
         - airflow_scheduler_data:/bitnami
+        - ./airflow/dags:/opt/bitnami/airflow/dags
+        - ./airflow/requirements.txt:/bitnami/python/requirements.txt
     airflow-worker:
       # TODO: to be reverted to use proper registry/distro on T39132
       # image: docker.io/bitnami/airflow-worker:2
@@ -39,6 +42,8 @@ services:
         - AIRFLOW_WEBSERVER_HOST=airflow
       volumes:
         - airflow_worker_data:/bitnami
+        - ./airflow/dags:/opt/bitnami/airflow/dags
+        - ./airflow/requirements.txt:/bitnami/python/requirements.txt
     airflow:
       image: docker.io/bitnami/airflow:2
       environment:
@@ -46,11 +51,13 @@ services:
         - AIRFLOW_DATABASE_USERNAME=bn_airflow
         - AIRFLOW_DATABASE_PASSWORD=bitnami1
         - AIRFLOW_EXECUTOR=CeleryExecutor
+        - AIRFLOW_LOAD_EXAMPLES=no
       ports:
         - '8080:8080'
       volumes:
         - airflow_data:/bitnami
-        
+        - ./airflow/dags:/opt/bitnami/airflow/dags
+        - ./airflow/requirements.txt:/bitnami/python/requirements.txt
     ml-flask:
         container_name: ml-flask
         build:
