--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,12 +69,26 @@ services:
         build:
           context: app/
         ports:
-          - "5000:5000"
+          - "5500:5500"
         volumes:
           - ./app:/app
           - ./image_store/ml_image_processing:/app/ml_image_processing
           - ./image_store/accurate_predictions:/app/accurate_predictions
           - ./image_store/inaccurate_predictions:/app/inaccurate_predictions
+    mlflow-server:
+      build: ./mlflow/
+      working_dir: /usr/src/app
+      ports:
+        - "5000:5000"
+      volumes:
+        - .:/usr/src/app
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://0.0.0.0:5000"]
+        interval: 10s
+        timeout: 10s
+        retries: 3
+        start_period: 10s
+      command: runServer.sh
 
 volumes:
   airflow_scheduler_data:
