--- a/training/Dockerfile
+++ b/training/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6-slim-buster
+FROM python:3.7.11-slim-buster
 COPY requirements.txt /opt/training/requirements.txt
 RUN apt-get update && apt-get install -y build-essential
 RUN pip install --upgrade pip setuptools wheel
@@ -7,4 +7,4 @@ WORKDIR /training/
 COPY . /training/
 ENV PYTHONUNBUFFERED 1
 ENTRYPOINT ["python"]
-CMD ["python3", "__main__.py"]
+CMD ["__main__.py"]
